deployments/pathweb/workloads/media-services/jellyfin/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: media-services
spec:
  serviceName: jellyfin-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      nodeSelector:
        node-group: baldric
      priorityClassName: rfhome-high-priority
      containers:
      - name: server
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
          name: http
        - containerPort: 8920
          name: https
        volumeMounts:
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config
        - name: metadata
          mountPath: /config/metadata
        - name: cache
          mountPath: /cache
        - name: tls-cert
          mountPath: /certs
          readOnly: true
        resources:
          requests:
            cpu: "600m"
            memory: "4Gi"
          limits:
            memory: "8Gi"
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media-smb
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: metadata
        persistentVolumeClaim:
          claimName: jellyfin-metadata
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache
      - name: tls-cert
        secret:
          secretName: services-wildcard-cert
