deployments/pathweb/workloads/media-services/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-headless
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  clusterIP: None
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  ports:
  - port: 80
    targetPort: http
    name: http
  - port: 443
    targetPort: https
    name: https
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    lb-location: rfhome
    external-dns: local-pdns
  annotations:
    external-dns.kubernetes.io/hostname: jellyfin.services.home.yrf.me
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: http
    name: http
  - port: 443
    targetPort: https
    name: https
