deployments/pathweb/workloads/media-services/jellyfin/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin-network-policy
  namespace: media-services
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  ingress:
  - matchLabels:
      "k8s:io.kubernetes.pod.namespace": traefik
  - matchExpressions:
    - key: "k8s:app.kubernetes.io/name"
      operator: In
      values:
      - sonarr
      - radarr
      - lidarr
      - overseerr
      - maintainerr
      - music-assistant
      - watchstate
  - fromCIDRSet:
    - cidr: 10.229.2.0/24
  - fromCIDRSet:
    - cidr: fd96:619:2::/64
  egress:
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: watchstate
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toCIDRSet:
    - cidr: ::/0
      except:
      - fc00::/7
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
      - 172.16.0.0/12
